# File-Integrity-Monitor--FIM-

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: README.md
examples/watchdir/: config.ini  data.json  sample.txt
examples/watchdir/subdir/: nested_file.txt
src/fim/: __init__.py  __main__.py  baseline.py  cli.py  hasher.py  models.py  reporter.py  storage.py  watcher.py
src/fim/templates/: report.html.j2
tests/: __init__.py  test_baseline.py  test_hasher.py  test_reporter.py
